packages/typ/tests/fixtures/diagnostics/0880_gadt_pair_constructor_payload_mismatch_02.ml.expected
File "0880_gadt_pair_constructor_payload_mismatch_02.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0880_gadt_pair_constructor_payload_mismatch_02 is not a valid module name.

File "0880_gadt_pair_constructor_payload_mismatch_02.ml", line 5, characters 48-52:
5 | let _ : (int * bool) pair_box_beta = Pair_beta (true, 1)
                                                    ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
